# parkflow-desktop

./: .env.example  .gitignore  .gitleaks.toml  .mcp.json  .npmrc  .prettierignore  .root-structure.md  API_ENDPOINTS_COMPLETE.md  BACKEND_QUALITY_AUDIT_2026_07_01.md  BACKEND_QUALITY_IMPROVEMENT_SUMMARY.md  C4_HTTPCOOKIE_MIGRATION.md  CHANGELOG.md  CHECKLIST-DEV.md  CLAUDE.md  COBERTURA_TESTS.md  COMPLETION_REPORT.md  CONTRIBUTING.md  CRITICAL_ISSUES_C1_C8_REPORT.md  FACTURACION_ELECTRONICA_STATUS.md  FINAL_STATUS_100_PERCENT.md  FRONTEND_INTEGRATION_GUIDE.md  IMPLEMENTATION_STATUS.md  INFORME_ESTADO_PROYECTO.md  INFORME_INTEGRACION_STEP2_STEP3_2026_06_28.md  INFORME_TESTS_2026_06_28.md  LICENSE  MULTITENANT_RLS_IMPLEMENTATION.md  PERFORMANCE_OPTIMIZATION_COMPLETE.md  PERFORMANCE_OPTIMIZATION_PLAN.md  README-DEV.md  README.md  REFACTOR_SUMMARY.md  RESUMEN_FINAL_INTEGRACION_2026_06_28.md  RESUMEN_FINAL_TESTS_2026_06_28.md  SECURITY.md  SESSION_SUMMARY_2026-06-19.md  TESTS_COMPLETION.md  commit_granular.sh  docker-compose.yml  package.json  (+5 more)
.Jules/: palette.md
.claude/: launch.json
.githooks/: pre-commit
.github/: labeler.yml  pull_request_template.md
.jules/: bolt.md  sentinel.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json  licensing.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: auth.rs  escpos.rs  lib.rs  local_first.rs  main.rs  printer.rs  printer_profile.rs
apps/desktop/src-tauri/src/licensing/: crypto.rs  fingerprint.rs  mod.rs  storage.rs  tamper.rs  types.rs
apps/desktop/src-tauri/src/local_first/: commands.rs  db.rs  mod.rs  sync.rs  types.rs
apps/desktop/src-tauri/tests/: concurrent_tickets_test.rs  licensing_persistence.rs  local_first_tests.rs  offline_persistence_test.rs
backend-audit-2026-07-01/: README.md  acciones-prioritarias.txt  audit-stats.json  reporte-completo.md
docs/: ADR_ONBOARDING_REFACTOR.md  AGENTS.md  ALL_PHASES_COMPLETE.md  API_ERROR_CODES_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_ENFORCEMENT.md  ARIA_LABEL_CHECKLIST.md  ARIA_LABEL_GUIDE.md  AUDITORIA_UI_UX_COMPLETA.md  AUDIT_REPORT_2026-05-07.md  AUTH_LOOP_FINAL_FIX.md  AUTH_LOOP_FIX_2026_06_30.md  (+34 more)
(+2994 files in other folders)
