[package]
name = "parkflow-desktop"
version = "0.1.0"
edition = "2021"

[package.metadata.tauri]
config = "tauri.conf.json"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.5.6", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
