[package]
name = "parkflow-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "parkflow_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[package.metadata.tauri]
config = "tauri.conf.json"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.5.6", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
ureq = { version = "2.10", features = ["tls"] }
serialport = "4.6"
keyring = "3.6"
uuid = { version = "1.10", features = ["v4", "serde"] }
