[package]
name = "parkflow-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "parkflow_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[package.metadata.tauri]
config = "tauri.conf.json"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.5.6", features = [] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
sentry = "0.35"
tauri-plugin-updater = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled-sqlcipher"] }
ureq = { version = "2.10", features = ["tls"] }
serialport = "4.6"
keyring = "3.6"
uuid = { version = "1.10", features = ["v4", "serde"] }
# Cross-platform directory paths for application data storage
dirs = "5.0"
# Cryptographic libraries for licensing
sha2 = "0.10"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
rsa = { version = "0.9", features = ["pem"] }
rand = "0.8"

[dev-dependencies]
serial_test = "3"
tempfile = "3"
